--- a/web/templates/footer.html
+++ b/web/templates/footer.html
@@ -8,11 +8,11 @@
 <h2>Headings count by level:</h2>
 <ul>
     <li><b>Heading1Count: {{ .linkInfo.Heading1Count }}</b></li>
-    <li><b>    Heading2Count</b></li>
-    <li><b>   Heading3Count</b></li>
-    <li><b>    Heading4Count</b></li>
-    <li><b>  Heading5Count</b></li>
-    <li><b>  Heading6Count</b></li>
+    <li><b>    Heading2Count : {{ .linkInfo.Heading2Count }}</b></li>
+    <li><b>   Heading3Count: {{ .linkInfo.Heading3Count }}</b></li>
+    <li><b>    Heading4Count: {{ .linkInfo.Heading4Count }}</b></li>
+    <li><b>  Heading5Count: {{ .linkInfo.Heading5Count }}</b></li>
+    <li><b>  Heading6Count: {{ .linkInfo.Heading6Count }}</b></li>
 
 </ul>
 <br>
