added login form

--- a/web/templates/footer.html
+++ b/web/templates/footer.html
@@ -22,4 +22,4 @@
 <br>
 <b>Amount of inaccessible links:</b> {{ .linkInfo.AmountInaccessibleLinks }}
 <br>
-        <b>Login Form:</b>
+<b>Login Form: {{ .linkInfo.LoginForm }}</b>
