--- a/web/templates/footer.html
+++ b/web/templates/footer.html
@@ -1,6 +1,6 @@
 <h1>footer</h1>
 <br>
-<b>HTML Version :</b>
+<b>HTML Version : {{ .linkInfo.HTMLVersion }}</b>
 <br>
 <b>Page Title: </b> {{ .pageTitle }}
 <br>
